--- a/footer/footer.html
+++ b/footer/footer.html
@@ -76,7 +76,7 @@
     <div class="row d-flex align-items-center">
       <div class="col-md-7 col-lg-8">
         <p class="text-center text-md-left">© 2020 Copyright:
-          <a href="https://mdbootstrap.com/">
+          <a href="#">
             <strong> UBS.com</strong>
           </a>
         </p>
